--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.1",
+    "firebaseui": "^6.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-image-gallery": "^1.2.11",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
